# expert-mouse-modifier

./: Cargo.toml  LICENSE  README.md  test_cmds.json
src/: cli.rs  deviceinfo.rs  eventprocessor.rs  lib.rs  localdata.rs  main.rs
