[package]
name = "expert-mouse-modifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = { version = "0.12.1", features = ["tokio"] }
log = "0.4.21"
simplelog = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
