[package]
name = "expert-mouse-modifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
dotenv = "0.15.0"
evdev = { version = "0.12.1", features = ["tokio"] }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_as = "0.0.1"
serde_json = "1.0.114"
serde_with = "3.7.0"
simplelog = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
